--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="text-center">
       <div class="thumbnail"><img  src="http://res.cloudinary.com/mpauldesigns/image/upload/v1523482591/richardfeynman-2.jpg" alt="Richard Feynman" style="width:100%">
         <div class="caption bg-white text-center mt-1">
-          <p>Feynman understood how to work hard AND play hard- <br>and sometimes it seemed like he barely knew the difference between the two!</p>
+          <p>Feynman understood how to work hard AND play hard- <br>and sometimes it seemed like he barely knew the difference between the two</p>
         </div>
       </div>
     </div>
@@ -50,6 +50,7 @@
     </div>
     </div>
     <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/kd0xTfdt6qw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h5 class="text-center px-3 mb-4"><b><br>For more info <a href="https://en.wikipedia.org/wiki/Richard_Feynman" target="_blank">check out the Wikipedia page for Feyman's life here</a> and read <em>"Surely You're Joking, Mr Feynman"</em> for more unbelievable tales about this man who helped design the atom bomb...and played some mean bongos!</em></b></h5>  
     </div>
   </div>    
