--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><b>1988</b> Feynman dies after a ten year battle with cancer. He said he "had told so many stories to so many people, even when he died he wouldn't be really gone." His legacy proves this is still true today</li>
           </ul>
       <p class="text-center pb-3"> His last words were "I'd hate to die twice. It's so boring." </p>
-  <blockquote class="blockquote py-3 px-3 bg-white">“Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.” </blockquote>
+  <blockquote class="blockquote py-3 px-3 mb-4 bg-white">“Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.” </blockquote>
 <footer class="blockquote-footer">Richard Feynman</footer>
 </blockquote>
     </div>
