--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 </blockquote>
     </div>
     </div>
-    <div>
-    <h5 class="text-center px-3 mb-4"><b><br>For more info <a href="https://en.wikipedia.org/wiki/Richard_Feynman" target="_blank">check out the Wikipedia page for Feyman's life here</a> and read <em>"Surely You're Joking, Mr Feynman"</em> for more unbelievable tales about this man who helped design the atom bomb...and played some mean bongos!</em></b></h5>  
+    <div class="mb-4">
+    <h5 class="text-center px-3"><b><br>For more info <a href="https://en.wikipedia.org/wiki/Richard_Feynman" target="_blank">check out the Wikipedia page for Feyman's life here</a> and read <em>"Surely You're Joking, Mr Feynman"</em> for more unbelievable tales about this man who helped design the atom bomb...and played some mean bongos!</em></b></h5>  
     </div>
 <div class="text-center mb-4">
 <iframe class="center-block" width="560" height="315" src="https://www.youtube.com/embed/kd0xTfdt6qw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
